# waybill

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  _build_backend.py  generate_schema.py  plugin.json  plugin.py  pyproject.toml
.github/workflows/: test.yaml
examples/: 01-minimal.yaml  02-matchers.yaml  03-transformers.yaml  04-pre-transformers.yaml  05-stream-profiles.yaml  06-multiple-profiles.yaml  07-exhaustive.yaml  08-validators.yaml  09-template-transformer.yaml  10-uk-freeview.yaml
schema/: config.schema.json
src/: _jinja.py  apply.py  pipeline.py  plan.py
src/matchers/: __init__.py  base.py  contains_any.py  exact_match.py  has_prefix.py  regex.py
src/transformers/: __init__.py  base.py  convert_cardinal_numbers.py  regex.py  set.py  set_metadata.py  strip.py  template.py
src/types/: config.py  plan.py  plugins.py
src/validators/: __init__.py  base.py  count.py  non_empty.py  regex.py
tests/: conftest.py
tests/unit/: conftest.py  test_build_matcher.py  test_build_transformer.py  test_build_validator.py  test_matcher_contains_any.py  test_matcher_exact_match.py  test_matcher_has_prefix.py  test_matcher_regex.py  test_order_streams_by_config.py  test_order_streams_by_pipeline.py  test_pipeline_validators.py  test_plan_assembly.py  test_plugin_runtime_hardening.py  test_predefined_variable_mutability.py  test_set_metadata_transformer.py  test_transformer_convert_cardinal_numbers.py  test_transformer_regex.py  test_transformer_set.py  test_transformer_set_metadata.py  test_transformer_strip.py  test_transformer_template.py  test_type_casting.py  test_validator_count.py  test_validator_non_empty.py  test_validator_pipeline_scopes.py  test_validator_regex_match.py  test_validators.py  test_variable_events.py  test_variable_scope.py  (+1 more)
