[project]
name = "waybill"
version = "1.4.0"
description = "A Dispatcharr plugin for managing channel configurations using Waybill manifests"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Provided by the Dispatcharr host environment; never vendored.
    "dispatcharr",
    "jinja2>=3.1.6",
]

[build-system]
# Local PEP 517 backend — produces the plugin ZIP via `uv build --wheel`.
requires = []
build-backend = "_build_backend"
backend-path = ["."]

[dependency-groups]
# Packages vendored into src/vendor/ at build time for use inside the plugin ZIP.
bundle = [
    "dacite>=1.9.2",
    "jinja2>=3.1.6",
    "markupsafe>=3.0.3",
    "num2words>=0.5.13",
    "pyyaml>=6.0",
    "word2number>=1.1",
]
dev = [
    "pytest>=8.3.5",
    "pytest-xdist[psutil]>=3.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.uv.sources]
dispatcharr = { git = "https://github.com/Dispatcharr/Dispatcharr", tag = "v0.24.0" }
